--- a/PA1_template2.Rmd
+++ b/PA1_template2.Rmd
@@ -6,6 +6,92 @@ output:
 ---
 
 
+#This is for my notes only - please look at PA1_template.md for the assignment
+
+
+```{r firstplot, results="markup"}
+with(data, 
+     plot(date, steps, 
+          xlab="date",
+          ylab="steps",
+          main = "Steps By Day",
+          type="h", lwd=4))
+```
+
+
+
+
+
+```{r}
+cdata <- na.omit(data)  #remove NAs
+origMean <- as.data.frame(tapply(cdata$steps, cdata$date, mean)) #calculate mean, by date
+setDT(origMean, keep.rownames = TRUE)[]
+colnames(origMean) <- c("date", "mean_of_steps_byDate")
+
+```
+
+
+
+
+```{r}
+origMedian <- as.data.frame(tapply(cdata$steps, cdata$date, median))
+setDT(origMedian, keep.rownames = TRUE)[]
+colnames(origMedian) <- c("date", "median_of_steps_byDate")
+```
+
+
+```{r}
+with(data2, 
+     plot(date, steps, 
+          xlab="date",
+          ylab="steps",
+          main = "Steps By Day, Na=Mean by Interval",
+          type="h", lwd=4))
+```
+
+
+```{r}
+with(data2, 
+     plot(date, steps, 
+          xlab="date",
+          ylab="steps",
+          main = "Steps By Day, Na=Mean by Interval",
+          type="h", lwd=4))
+```
+
+
+```{r}
+newMean <- as.data.frame(tapply(data2$steps, data2$date, mean))
+
+```
+```{r}
+newMedian <- as.data.frame(tapply(data2$steps, data2$date, median))
+
+```
+
+
+
+
+par(mfrow=c(2,1))
+with(intervalWK, plot(namesDatwk, wkMeans, 
+                       xlab="Time Intervals", 
+                       ylab="Average Steps, over all days",
+                       main= "Weekdays only", 
+                       type="l", 
+                       lwd=4, 
+                       col="blue"))
+with(intervalWKEnd, plot(namesDatwkEnd, wkEndMeans, 
+                       xlab="Time Intervals", 
+                       ylab="Average Steps, over all days",
+                       main= "Weekend only", 
+                       type="l", 
+                       lwd=4, 
+                       col="red"))
+x<- c(0,500,1000,1500,2000,2500)
+axis(side=1, at=x, labels=T)
+#axis(1, at = seq(10, 2000, by = 1000))
+
+
 ## Loading and preprocessing the data
 
 
@@ -23,3 +109,43 @@ output:
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+
+###Weekday Only Plot Creation
+```{r }
+weekOnly <- data2[which(data2$wDay == 'weekday'), ]
+wkMeans <- tapply(weekOnly$steps, weekOnly$interval, mean) #creates array of intervals and their means
+wkintDat <- as.data.frame(wkMeans)
+
+namesDatwk <- names(wkMeans) #takes names of array, sets to variable #must be a faster way to do this
+intervalWK <- cbind(namesDatwk, wkintDat)
+```
+
+###Weekends Only Plot Creation
+```{r}
+endOnly <- data2[which(data2$wDay == 'weekend'), ]
+wkEndMeans <- tapply(endOnly$steps, endOnly$interval, mean) #creates array of intervals and their means
+wkEndintDat <- as.data.frame(wkEndMeans)
+namesDatwkEnd <- names(wkEndMeans) #takes names of array, sets to variable #must be a faster way to do this
+intervalWKEnd <- cbind(namesDatwkEnd, wkEndintDat)
+```
+
+### Weekend & Weekday Plots
+```{r fourth plot}
+par(mfrow=c(2,1))
+with(intervalWK, plot(namesDatwk, wkMeans, 
+                       xlab="Time Intervals", 
+                       ylab="Average Steps, over all days",
+                       main= "Weekdays only", 
+                       type="l", 
+                       lwd=4, 
+                       col="blue"))
+with(intervalWKEnd, plot(namesDatwkEnd, wkEndMeans, 
+                       xlab="Time Intervals", 
+                       ylab="Average Steps, over all days",
+                       main= "Weekend only", 
+                       type="l", 
+                       lwd=4, 
+                       col="red"))
+#axis(1, at = seq(10, 2000, by = 1000))
+```
